# fe_sm_slip_estimation

./: LOG00281.TXT  LOG00289.TXT  LOG00295.TXT  README.md  all_plot_bool.py  heuristic_schedule.py  longitudinal_speed_estimation.py  longitudinal_speed_estimation_class.py  lowpassfilter.py  lowpassfilter_onestep.py  main.py  offset.py  pyproject.toml  slip_estimation.py  vehicle_state_observer.py
src/fe_sm_slip_estimation/: __init__.py  all_plot_bool.py  heuristic_schedule.py  longitudinal_speed_estimation.py  vehicle_model.py  vehicle_state_observer.py
tests/: test_heuristic_schedule.py
