[project]
name = "fe-sm-slip-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "takay99", email = "mclarenhonda.rc@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scipy>=1.16.3",
]

[project.scripts]
fe-sm-slip-estimation = "fe_sm_slip_estimation:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
